# jheuelify

./: Dockerfile  README.md  docker-compose.yml
faces/: .gitignore
jheuelify/: CMakeLists.txt
jheuelify/include/: SignalHandler.h  faceswapper.h  mask.h  transformation.h
jheuelify/src/: CMakeLists.txt  SignalHandler.cpp  main.cpp
